@@ -1,3 +1,9 @@
+2016-03-28  Ben Elliston  <bje@gnu.org>
+
+	* lib/utils.exp (which): Reimplement to more closely mimic the
+	behaviour of the UNIX which utility.
+	* testsuite/runtest.all/utils.test: Test proc which.
+
 2016-03-27  Ben Elliston  <bje@gnu.org>
 
 	* lib/remote.exp (standard_wait): Append any trailing characters
